# Final_try_1

./: .editorconfig  .gitignore  FILE_ORGANIZATION_ANALYSIS.md  INTEGRATION_COMPLETE.md  MAIN_WINDOW_GUIDE.md  MIGRATION_COMPLETE.md  README.md  debug_startup_dialog.py  extract_comments.py  extracted_comments.txt  pyproject.toml  requirements.txt  run_gui.bat  setup.py  setup_env.py  start_gui.py  start_image_analysis.bat  test_gds_display.py  test_step3_manual_transformation.py
.github/workflows/: ci.yml
archive/Old_models/: aligned_gds_model.py  initial_gds_model.py  sem_image.py
archive/duplicate_code/: auto_alignment_service.py  auto_alignment_service_transformations.py  automatic_pipeline_separate.py  config_manager.py  file_service_advanced.py  frame_extraction_service.py  logging_utils_advanced.py  simple_gds_extraction.txt  simple_gds_loader.py  simple_initial_gds_model.py  transform_move.py  transform_service.py  transform_zoom.py
archive/old_main_windows/: main_window_old.py  modular_main_window_clean.py
docs/: CONTRIBUTING.md  DEVELOPMENT.md  README.md
src/: __init__.py
src/core/: __init__.py  gds_aligned_generator.py  gds_display_generator.py  simple_gds_loader.py
src/services/: __init__.py  auto_alignment_service.py  base_service.py  file_listing_service.py  file_loading_service.py  file_service.py  frame_extraction_service.py  gds_image_service.py  gds_transformation_service.py  manual_alignment_service.py  new_gds_service.py  overlay.py  simple_alignment_service.py  simple_file_service.py  simple_image_processing_service.py  simple_scoring_service.py  transformation_service.py  unified_transformation_service.py  workflow_service.py
src/ui/: __init__.py  __main__.py  alignment_controller.py  alignment_operations.py  base_panels.py  core_main_window.py  file_handler.py  file_operations.py  gds_manager.py  gds_operations.py  help_dialog.py  image_processing.py  image_processor.py  main_window.py  main_window_v2.py  modular_main_window.py  modular_main_window_clean.py  scoring_calculator.py  scoring_operations.py  settings_dialog.py  signal_handlers.py  ui_setup.py  view_controller.py  view_manager.py
src/utils/: __init__.py  three_point_alignment.py  transformations.py
(+121 files in other folders)
